[workspace]
members = ["*/rust"]
resolver = "3"

[workspace.package]
authors = ["butterflysky <bright.art1794@fastmail.com>"]
description = "Part of a collection of practice exercises I'm doing to learn Rust"
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
proptest = "1.7.0"

[profile.release]
strip = "none"
